# prime-perf

./: .gitignore  README.md  pyproject.toml
configs/prime-rl/: perf-optimize-disagg-c-full.toml  perf-optimize-disagg-c-matmul.toml  perf-optimize-disagg-c.toml  perf-optimize-disagg-inference.toml  perf-optimize-disagg.toml  perf-optimize-hosted.toml  perf-optimize-local.toml  perf-optimize-multinode.toml
docs/: DESIGN.md  OVERVIEW.md  ROADMAP.md
docs/features/: bwrap_builder.md  configuration.md  exception_hierarchy.md  hardware_profiles.md  perf_parser.md  problem_bank.md  sandbox.md  type_system.md  types_and_config.md  variance_validation.md  verifiers_environment.md
fixtures/c_programs/: compile_error.c  gen_matmul_input.py  hello.c  matmul_naive.c  matmul_tiled.c  timeout.c
problems/hash_table/: spec.md
problems/matmul/: comparison.json  spec.md
problems/nbody/: spec.md
problems/sort/: spec.md
problems/stencil/: spec.md
scripts/: generate_hash_table_tests.py  generate_matmul_tests.py  generate_nbody_tests.py  generate_sort_tests.py  generate_stencil_tests.py
src/perf_optimize/: __init__.py  bwrap.py  comparison.py  config.py  counters.py  env.py  exceptions.py  languages.py  perf_parser.py  problems.py  processor.py  prompts.py  reward.py  sandbox.py  types.py
tests/: conftest.py
tests/integration/: test_env_rollout.py  test_prerequisites.py  test_sandbox.py
tests/unit/: test_bwrap_builder.py  test_comparison.py  test_config.py  test_counters.py  test_env.py  test_perf_parser.py  test_problems.py  test_processor.py  test_prompts.py  (+3 more)
(+27 files in other folders)
